samples/_failures_safe/1761658094_c99b53_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f0bd71d7.c: In function ‘main’:
./samples/SAFE/__tmp_f0bd71d7.c:168:9: error: expected declaration or statement at end of input
  168 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_f0bd71d7.c:168:9: error: expected declaration or statement at end of input
